Removed the class property from the bean utils enumeration.